--- a/risk/src/main/resources/templates/attackphase.html
+++ b/risk/src/main/resources/templates/attackphase.html
@@ -79,10 +79,11 @@
 
     <div th:replace="layout :: footer"/>
 </div>
-
-<ul th:each="country : ${allCountryNames}" th:id="${country.key}">
-    <option th:each="opponentCountry : ${country.value}" th:value="${opponentCountry}" th:text="${opponentCountry}"></option>
-</ul>
+<div style="display:none;">
+    <ul th:each="country : ${allCountryNames}" th:id="${country.key}">
+        <option th:each="opponentCountry : ${country.value}" th:value="${opponentCountry}" th:text="${opponentCountry}"></option>
+    </ul>
+</div>
 
 <script>
 $(function () {
@@ -93,8 +94,8 @@ $(function () {
         var currentCountry = $(this).val();
         console.log(currentCountry);
         $("#" + currentCountry + " option").each(function(index, value){
-            console.log(value);
-            $("#defendingCountry").append(value);
+            console.log($(this).html());
+            $("#defendingCountry").append('<option value="' + $(this).html() + '">' + $(this).html() + '</option>');
         });
     });
 
