--- a/risk/src/main/resources/templates/fortifyphase.html
+++ b/risk/src/main/resources/templates/fortifyphase.html
@@ -65,25 +65,6 @@
                     <div class="right-table">
                         <div th:replace="layout :: phaseView"/>
                         <div th:replace="layout :: dominationView"/>
-                        <!--<table>-->
-                            <!--<tr>-->
-                                <!--<td>Country name</td>-->
-                                <!--<td>Army count</td>-->
-                            <!--</tr>-->
-                            <!--<tr>-->
-                                <!--<td>-->
-                                    <!--<div th:each="country : ${countryNames}">-->
-                                        <!--<span th:text="${country}"></span><br/>-->
-                                    <!--</div>-->
-                                <!--</td>-->
-                                <!--<td>-->
-                                    <!--<div th:each="armyCount : ${armyCounts}">-->
-                                        <!--<span th:text="${armyCount}"></span><br/>-->
-                                    <!--</div>-->
-                                <!--</td>-->
-                            <!--</tr>-->
-
-                        <!--</table>-->
                     </div>
                 </div>
             </div>
@@ -95,6 +76,12 @@
 
     <div th:replace="layout :: footer"/>
 </div>
-
+<span id="isEnd" th:text="${isEnd}"></span>
+<script>
+    if($("#isEnd").text() == 'true'){
+        alert("You won the game !");
+        window.location("/endGame");
+    }
+</script>
 </body>
 </html>
