--- a/risk/src/main/resources/templates/index.html
+++ b/risk/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
                             </tr>
                             <tr>
                                 <td></td>
-                                <td><input type="submit" name="submit" value="Play Game"></td>
+                                <td><input type="submit" name="submit" value="Add behaviors"></td>
                             </tr>
                         </table>
                     </form>
