Delegated phase info response to use case layer

--- a/risk/src/main/resources/templates/index.html
+++ b/risk/src/main/resources/templates/index.html
@@ -14,14 +14,17 @@
             <div class="overflow">
                 <div id="textpadding">
                     <h2>Risk - Game Play</h2>
-                    <!--<div class="sticky">-->
-                    <!--<i class="fa fa-info-circle" aria-hidden="true"></i> <b>About</b>-->
-                    <!--</div>-->
-                    Select the game mode<br>
-                    <ul>
-                        <li><a th:href="@{/singleGame01}">Single Game Mode</a></li>
-                        <li><a th:href="@{/tounament01}">Tournament Mode</a></li>
-                    </ul>
+                    <table>
+                        <tr>
+                            <th>Select the game mode</th>
+                        </tr>
+                        <tr>
+                            <td><a th:href="@{/singleGame01}">Single Game Mode</a></td>
+                        </tr>
+                        <tr>
+                            <td><a th:href="@{/tounament01}">Tournament Mode</a></td>
+                        </tr>
+                    </table>
                 </div>
 
 
