Added endGame variable to alert user

--- a/risk/src/main/resources/templates/fortifyphase.html
+++ b/risk/src/main/resources/templates/fortifyphase.html
@@ -76,7 +76,7 @@
 
     <div th:replace="layout :: footer"/>
 </div>
-<span id="isEnd" th:text="${isEnd}"></span>
+<span id="isEnd" th:text="${isEnd}" style="display:none"></span>
 <script>
     if($("#isEnd").text() == 'true'){
         alert("You won the game !");
