Added tournament mode

--- a/risk/src/main/resources/templates/index.html
+++ b/risk/src/main/resources/templates/index.html
@@ -14,15 +14,16 @@
             <div class="overflow">
                 <div id="textpadding">
                     <h2>Risk - Game Play</h2>
+                    <div class="sticky">
+                        <i class="fa fa-info-circle" aria-hidden="true"></i> <b>Select the game mode</b>
+                    </div>
+                    <br/>
                     <table>
-                        <tr>
-                            <th>Select the game mode</th>
-                        </tr>
                         <tr>
                             <td><a th:href="@{/singleGame01}">Single Game Mode</a></td>
                         </tr>
                         <tr>
-                            <td><a th:href="@{/tounament01}">Tournament Mode</a></td>
+                            <td><a th:href="@{/tournament01}">Tournament Mode</a></td>
                         </tr>
                     </table>
                 </div>
