--- a/risk/src/main/resources/templates/layout.html
+++ b/risk/src/main/resources/templates/layout.html
@@ -29,7 +29,8 @@
         <a title="single game" th:href="@{/singleGame01}">single game</a>&nbsp;&nbsp; |&nbsp;&nbsp;
         <a title="tournament" th:href="@{/tournament01}">tournament</a>&nbsp;&nbsp; |&nbsp;&nbsp;
         <a title="new map" th:href="@{/create01}">new map</a>&nbsp;&nbsp; |&nbsp;&nbsp;
-        <a title="edit map" th:href="@{/edit00}">edit map</a>
+        <a title="edit map" th:href="@{/edit00}">edit map</a> &nbsp;&nbsp; |&nbsp;&nbsp;
+        <a title="save game" th:href="@{/save00}">save game</a>
         <!--<a title="end game" th:href="@{/endGame}">end game</a>-->
     </div>
 
