Refactored views - extract method, to enable loadGame

--- a/risk/src/main/resources/templates/layout.html
+++ b/risk/src/main/resources/templates/layout.html
@@ -26,12 +26,12 @@
 
     <div id="menu">
         <a title="home" th:href="@{/}">home</a>&nbsp;&nbsp; |&nbsp;&nbsp;
-        <a title="single game" th:href="@{/singleGame01}">single game</a>&nbsp;&nbsp; |&nbsp;&nbsp;
-        <a title="tournament" th:href="@{/tournament01}">tournament</a>&nbsp;&nbsp; |&nbsp;&nbsp;
         <a title="new map" th:href="@{/create01}">new map</a>&nbsp;&nbsp; |&nbsp;&nbsp;
         <a title="edit map" th:href="@{/edit00}">edit map</a> &nbsp;&nbsp; |&nbsp;&nbsp;
-        <a title="save game" th:href="@{/save00}">save game</a>
-        <!--<a title="end game" th:href="@{/endGame}">end game</a>-->
+        <a title="new game" th:href="@{/}">new game</a>&nbsp;&nbsp; |&nbsp;&nbsp;
+        <a title="save game" th:href="@{/saveGame}">save game</a>&nbsp;&nbsp; |&nbsp;&nbsp;
+        <a title="load game" th:href="@{/loadGame}">load game</a>&nbsp;&nbsp; |&nbsp;&nbsp;
+        <a title="end game" th:href="@{/endGame}">end game</a>
     </div>
 
 </div>
