--- a/risk/src/main/resources/templates/savegame.html
+++ b/risk/src/main/resources/templates/savegame.html
@@ -14,23 +14,24 @@
             <div class="overflow">
                 <div id="textpadding">
                     <h2>Risk - Game Play</h2>
-                    
+                    <div class="sticky">
+                        <i class="fa fa-info-circle" aria-hidden="true"></i> <b>Select the game mode</b>
+                    </div>
                     <br/>
-                    <form th:action="@{/load00}" method="get">
+                    <form method="post" th:action="@{/saveGame}">
                         <table>
                             <tr>
-                                <td>Enter File Name to load</td>
-                                <td><input type="text" name="savedFileName"/></td>
+                                <td>Enter file name:</td>
                             </tr>
                             <tr>
-                                <td></td>
-                                <td><input type="submit" name="submit" value="Submit"></td>
+                                <td><input type="text" name="fileName" placeholder=".ser"></td>
+                            </tr>
+                            <tr>
+                                <td><input type="submit" name="submit" value="Save"></td>
                             </tr>
                         </table>
                     </form>
                 </div>
-
-
             </div>
         </div>
     </div>
